--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,3 +49,5 @@ repos:
       - bleak_retry_connector==3.5.0
       - typer[all]==0.9.0
       - rich==13.7.1
+      - homeassistant-stubs==2024.3.3
+      - voluptuous==0.13.1
