--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -7,15 +7,25 @@
       "connectable": true
     },
     {
-      "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e"
+      "local_name": "DYNA2*",
+      "connectable": true
+    },
+    {
+      "local_name": "DYNWRGB*",
+      "connectable": true
+    },
+    {
+      "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e",
+      "connectable": true
     }
   ],
   "codeowners": [
-    "@titilambert"
+    "@TheMicDiet"
   ],
   "config_flow": true,
   "dependencies": ["bluetooth_adapters"],
-  "documentation": "https://www.home-assistant.io/integrations/chihiros",
+  "documentation": "https://github.com/TheMicDiet/chihiros-led-control",
+  "issue_tracker": "https://github.com/TheMicDiet/chihiros-led-control/issues",
   "iot_class": "assumed_state",
   "version": "0.1.0",
   "requirements": []
