--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   validate-hacs:
     runs-on: "ubuntu-latest"
+    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: "actions/checkout@v4"
