--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -32,5 +32,9 @@
   "issue_tracker": "https://github.com/TheMicDiet/chihiros-led-control/issues",
   "iot_class": "assumed_state",
   "version": "0.1.2",
-  "requirements": []
+  "requirements": [
+    "bleak==0.21.1",
+    "bleak_retry_connector==3.5.0",
+    "typer[all]==0.9.0"
+  ]
 }
