--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -55,6 +55,6 @@
     "bleak==0.21.1",
     "bleak_retry_connector==3.5.0",
     "typer[all]==0.9.0"
-  ]
-  "version": "0.2.0",
+  ],
+  "version": "0.2.0"
 }
