add experimental support for c2 rgb

--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -39,6 +39,10 @@
       "connectable": true
     },
     {
+      "local_name": "DYNCRGP*",
+      "connectable": true
+    },
+    {
       "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e",
       "connectable": true
     }
@@ -54,5 +58,5 @@
   "requirements": [
     "typer[all]==0.9.0"
   ],
-  "version": "0.2.4"
+  "version": "0.3.0"
 }
