add support for universal wrgb

--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -43,6 +43,10 @@
       "connectable": true
     },
     {
+      "local_name": "DYU*",
+      "connectable": true
+    },
+    {
       "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e",
       "connectable": true
     }
@@ -58,5 +62,5 @@
   "requirements": [
     "typer[all]==0.9.0"
   ],
-  "version": "0.3.0"
+  "version": "0.4.0"
 }
