--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -47,6 +47,14 @@
       "connectable": true
     },
     {
+      "local_name": "DYNC2N*",
+      "connectable": true
+    },
+    {
+      "local_name": "DYCOM*",
+      "connectable": true
+    },
+    {
       "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e",
       "connectable": true
     }
@@ -62,5 +70,5 @@
   "requirements": [
     "typer[all]==0.9.0"
   ],
-  "version": "0.4.1"
+  "version": "0.5.0"
 }
