add support for wrgb 2 slim

--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -55,6 +55,10 @@
       "connectable": true
     },
     {
+      "local_name": "DYSILN*",
+      "connectable": true
+    },
+    {
       "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e",
       "connectable": true
     }
@@ -70,5 +74,5 @@
   "requirements": [
     "typer[all]==0.9.0"
   ],
-  "version": "0.5.1"
+  "version": "0.6.0"
 }
