--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -59,6 +59,10 @@
       "connectable": true
     },
     {
+      "local_name": "DYLED*",
+      "connectable": true
+    },
+    {
       "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e",
       "connectable": true
     }
@@ -74,5 +78,5 @@
   "requirements": [
     "typer[all]==0.9.0"
   ],
-  "version": "0.6.4"
+  "version": "0.6.5"
 }
