--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -35,7 +35,7 @@
       "connectable": true
     },
     {
-      "local_name": "DYWPRO*",
+      "local_name": "DYWPR*",
       "connectable": true
     },
     {
@@ -63,6 +63,10 @@
       "connectable": true
     },
     {
+      "local_name": "DYZSD*",
+      "connectable": true
+    },
+    {
       "service_data_uuid": "6e400001-b5a3-f393-e0a9-e50e24dcca9e",
       "connectable": true
     }
@@ -78,5 +82,5 @@
   "requirements": [
     "typer[all]==0.9.0"
   ],
-  "version": "0.6.5"
+  "version": "0.6.6"
 }
