modified:   setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,14 @@ install_requires =
     bleak_retry_connector==3.9.0
     typer[all]==0.15.2
     rich==13.9.4
+
+[options.extras_require]
+ha =
+    homeassistant>=2024.6
+    home-assistant-bluetooth>=1.10.5
+    voluptuous>=0.13
+dev =
+    pytest
+    pytest-asyncio
+    ruff
+    mypy
