modified:   setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ install_requires =
     bleak_retry_connector==3.9.0
     typer[all]==0.15.2
     rich==13.9.4
+    python_requires = >=3.12
 
 [options.extras_require]
 ha =
