modified:   custom_components/chihiros/__init__.py 	modified:   custom_components/chihiros/button.py 	modified:   custom_components/chihiros/config_flow.py 	modified:   custom_components/chihiros/manifest.json 	modified:   custom_components/chihiros/number.py

--- a/custom_components/chihiros/manifest.json
+++ b/custom_components/chihiros/manifest.json
@@ -11,6 +11,14 @@
       "connectable": true
     },
     {
+      "local_name": "DYDOSE*",
+      "connectable": true
+    },
+    {
+      "local_name": "DYDOSED*",
+      "connectable": true
+    },
+    {
       "local_name": "DYNA2*",
       "connectable": true
     },
