modified:   custom_components/chihiros/__init__.py 	modified:   custom_components/chihiros/chihiros_doser_control/__init__.py 	modified:   custom_components/chihiros/sensor.py 	modified:   custom_components/chihiros/services.yaml

--- a/custom_components/chihiros/services.yaml
+++ b/custom_components/chihiros/services.yaml
@@ -29,105 +29,106 @@ dose_ml:
           step: 0.1
           mode: box
 
-read_daily_totals:
-  name: Read daily totals (mL)
-  description: Query the doser for today's per-channel totals and print the result.
-  fields:
-    device_id:
-      name: Device
-      description: (Optional) Pick the doser device (resolves BLE address)
-      selector:
-        device: {}
-    address:
-      name: BLE address
-      description: (Optional) Use if you don’t select a device
-      example: "AA:BB:CC:DD:EE:FF"
+# --- DISABLED: read_daily_totals ---
+# read_daily_totals:
+#   name: Read daily totals (mL)
+#   description: Query the doser for today's per-channel totals and print the result.
+#   fields:
+#     device_id:
+#       name: Device
+#       description: (Optional) Pick the doser device (resolves BLE address)
+#       selector:
+#         device: {}
+#     address:
+#       name: BLE address
+#       description: (Optional) Use if you don’t select a device
+#       example: "AA:BB:CC:DD:EE:FF"
 
-set_24h_dose:
-  name: Configure 24-hour dosing
-  description: Set a daily total with a time-of-day and which days it should run.
-  fields:
-    device_id:
-      name: Device
-      description: (Optional) Pick the doser device (resolves BLE address)
-      selector:
-        device: {}
-    address:
-      name: BLE address
-      description: (Optional) Use if you don’t select a device
-      example: "AA:BB:CC:DD:EE:FF"
-    channel:
-      name: Channel
-      required: true
-      selector:
-        number:
-          min: 1
-          max: 4
-          step: 1
-    daily_ml:
-      name: Daily dose (mL)
-      required: true
-      selector:
-        number:
-          min: 0.2
-          max: 999.9
-          step: 0.1
-          mode: box
-    time:
-      name: Time of day
-      description: Start time for the daily dosing schedule (HH:MM, 24h).
-      required: true
-      selector:
-        time: {}
-    weekdays:
-      name: Days (English)
-      description: Choose the days the schedule runs. Pick "everyday" or select multiple days.
-      required: false
-      selector:
-        select:
-          multiple: true
-          mode: list
-          options:
-            - everyday
-            - monday
-            - tuesday
-            - wednesday
-            - thursday
-            - friday
-            - saturday
-            - sunday
-    catch_up:
-      name: Catch up missed doses
-      required: false
-      default: false
-      selector:
-        boolean: {}
-    weekday_mask:
-      name: Days bitmask (advanced)
-      description: Alternative to the list above. 127 = Every day. If both are provided, the list of days is used.
-      required: false
-      default: 127
-      selector:
-        number:
-          min: 0
-          max: 127
-          mode: box
-    # Optional fallback if you prefer hour/minutes instead of the time field:
-    hour:
-      name: Hour (advanced)
-      description: Use only if you omit the Time of day field (0–23).
-      required: false
-      selector:
-        number:
-          min: 0
-          max: 23
-          step: 1
-    minutes:
-      name: Minutes (advanced)
-      description: Use only if you omit the Time of day field (0–59).
-      required: false
-      selector:
-        number:
-          min: 0
-          max: 59
-          step: 1
+# --- DISABLED: set_24h_dose ---
+# set_24h_dose:
+#   name: Configure 24-hour dosing
+#   description: Set a daily total with a time-of-day and which days it should run.
+#   fields:
+#     device_id:
+#       name: Device
+#       description: (Optional) Pick the doser device (resolves BLE address)
+#       selector:
+#         device: {}
+#     address:
+#       name: BLE address
+#       description: (Optional) Use if you don’t select a device
+#       example: "AA:BB:CC:DD:EE:FF"
+#     channel:
+#       name: Channel
+#       required: true
+#       selector:
+#         number:
+#           min: 1
+#           max: 4
+#           step: 1
+#     daily_ml:
+#       name: Daily dose (mL)
+#       required: true
+#       selector:
+#         number:
+#           min: 0.2
+#           max: 999.9
+#           step: 0.1
+#           mode: box
+#     time:
+#       name: Time of day
+#       description: Start time for the daily dosing schedule (HH:MM, 24h).
+#       required: true
+#       selector:
+#         time: {}
+#     weekdays:
+#       name: Days (English)
+#       description: Choose the days the schedule runs. Pick "everyday" or select multiple days.
+#       required: false
+#       selector:
+#         select:
+#           multiple: true
+#           mode: list
+#           options:
+#             - everyday
+#             - monday
+#             - tuesday
+#             - wednesday
+#             - thursday
+#             - friday
+#             - saturday
+#             - sunday
+#     catch_up:
+#       name: Catch up missed doses
+#       required: false
+#       default: false
+#       selector:
+#         boolean: {}
+#     weekday_mask:
+#       name: Days bitmask (advanced)
+#       description: Alternative to the list above. 127 = Every day. If both are provided, the list of days is used.
+#       required: false
+#       default: 127
+#       selector:
+#         number:
+#           min: 0
+#           max: 127
+#           mode: box
+#     hour:
+#       name: Hour (advanced)
+#       description: Use only if you omit the Time of day field (0–23).
+#       required: false
+#       selector:
+#         number:
+#           min: 0
+#           max: 23
+#           step: 1
+#     minutes:
+#       name: Minutes (advanced)
+#       description: Use only if you omit the Time of day field (0–59).
+#       required: false
+#       selector:
+#         number:
+#           min: 0
+#           max: 59
+#           step: 1
